2008-04-01  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.5.31
	* Frontend-GNOME-IRC.mdp: Reference GTK# 2.8 / GNOME# 2.8.

2008-04-01  Mirco Bauer <meebey@meebey.net> 

	* IrcGroupChatView.cs: Fixed whitespace.

2008-01-31  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.5.30.

2007-12-25  Mirco Bauer <meebey@meebey.net> 

	* IrcGroupChatView.cs: Impemented ban/unban and query in person popup menu.
	* Frontend-GNOME-IRC.mdp: Updated using MonoDevelop 0.18.1
