@@ -16,6 +16,7 @@
   <Contents>
     <File name="AssemblyInfo.cs" subtype="Code" buildaction="Compile" />
     <File name="IrcGroupChatView.cs" subtype="Code" buildaction="Compile" />
+    <File name="IrcPersonChatView.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="True" refto="Common" />
