@@ -1,5 +1,16 @@
 2008-06-02  Mirco Bauer <meebey@meebey.net> 
 
+	* MainWindow.cs: Fixed whitespace.
+	* Chats/ProtocolChatView.cs, Chats/SessionChatView.cs,
+	  Chats/PersonChatView.cs, Chats/GroupChatView.cs, Chats/ChatView.cs:
+	  Refactored tab menu code.
+	
+	  Moved tab popup menu to ChatView.
+	
+	  Implemented closing tabs using the middle-mouse button.
+
+2008-06-02  Mirco Bauer <meebey@meebey.net> 
+
 	* Frontend-GNOME.mdp, Chats/ProtocolChatView.cs, Chats/NetworkChatView.cs:
 	  Renamed NetworkChatView to ProtocolChatView.
 
