@@ -1,3 +1,12 @@
+2008-06-02  Mirco Bauer <meebey@meebey.net> 
+
+	* IrcPersonChatView.cs, IrcGroupChatView.cs, Frontend-GNOME-IRC.mdp:
+	  Refactored tab menu code.
+	
+	  Moved tab popup menu to ChatView.
+	
+	  Implemented closing tabs using the middle-mouse button.
+
 2008-04-01  Mirco Bauer <meebey@meebey.net> 
 
 	* AssemblyInfo.cs: Bumped version to 0.5.31
